0027573: AIS_ColorScale::FindColor does not take into account custom colors

Modified AIS_ColorScale::FindColor (Standard_Real, Quantity_Color&) to take into account custom colors